--- a/style.css
+++ b/style.css
@@ -68,6 +68,19 @@ body {
     justify-content: center;
 }
 
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 .food-card {
     flex: 1 1 160px;
     background-color: #eff1db;
@@ -79,6 +92,8 @@ body {
     scale: 0.95;
     border-radius: 15px;
     transition: scale 0.3s;
+    animation: fadeInUp 0.6s ease forwards;
+    opacity: 0;
 }
 
 .food-card:hover {
@@ -109,7 +124,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     margin: 10px;
-    justify-content: space-between;
 }
 
 .button-container {
@@ -168,3 +182,4 @@ body {
         width: 100%; /* 1 в строке */
     }
 }
+
